// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should match snapshot 1`] = `
<div>
  <button
    class="sc-bcXHqe jFjLKi"
    font-size="XS"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`Button component should render the secondary variation 1`] = `
<div>
  <button
    class="sc-bcXHqe HdwE"
    font-size="XS"
    type="button"
  >
    Click me
  </button>
</div>
`;
